Small edit to my pagee.

--- a/MacSite/index.html
+++ b/MacSite/index.html
@@ -4,6 +4,6 @@
 	<title>Another Try for me</title>
 </head>
 <body>
-<h1>One more try</h1>
+<h1>One more try! I need to learn this thing, really!</h1>
 </body>
 </html>
